# fast-bert

./: README.md  benchmark_models.py  config.py  evaluate_models.py  main.py  pyproject.toml  quantize_models.py
src/fast_bert/: benchmark.py  config.py  evaluate.py  quantize.py
